<resources>
    <string name="app_name">SaborApp</string>
    <string name="business_name">Pollería El Buen Sabor</string>
    
    <!-- Login (HU-01) -->
    <string name="label_usuario">Usuario</string>
    <string name="label_contrasena">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="hint_prueba">Prueba: admin / 1234</string>
    <string name="error_usuario_vacio">El usuario es requerido</string>
    <string name="error_clave_vacia">La contraseña es requerida</string>
    <string name="error_credenciales">Credenciales incorrectas</string>
    <string name="error_conexion">No se pudo conectar al servidor XAMPP</string>

    <!-- Menú (HU-02) -->
    <string name="saludo_usuario">Hola, %1$s</string>
    <string name="rol_usuario">Rol: %1$s</string>
    <string name="menu_platos">Platos</string>
    <string name="menu_mesas">Mesas</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_reportes">Reportes</string>
    <string name="btn_salir">Salir</string>
</resources>